# vassoura

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  create_vassoura.py  heuristics.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-ci.yml
datasets/: README.md
docs/: api.md  core.md  correlacao.md  heuristics.md  index.md  quickstart.md  utils.md  vif.md
docs/examples/: quickstart.ipynb
examples/: 0_quickstart.ipynb  1_exemplo_autocorrelacao.ipynb  exemplo_autocorrelacao.ipynb  exemplo_uso.ipynb
legacy/: .gitignore_legacy  LICENSE  NOTICE.md  README.md  requirements.txt
legacy/docs/: analisador.md  autocorrelacao.md  correlacao.md  heuristics.md  limpeza.md  relatorio.md  vif.md
legacy/old_vassoura/: __init__.py  _compat.py  autocorrelacao.py  core.py  corr_manager.py  correlacao.py  encoders.py  heuristics.py  heuristics_boruta_multi_shap.py  limpeza.py  relatorio.py  vif.py
src/vassoura/: __init__.py  _compat.py  core.py  logs.py  report.py
test_results/: test_advanced_heuristics.txt  test_autocorr.txt  test_autocorrelacao.txt  test_core.txt  test_correlacao.txt  test_importance.txt  test_limpeza.txt  test_relatorio_modern.txt  test_scaler.txt  test_session.txt  test_special_cols.txt  test_utils.txt  test_variance.txt  test_vassoura_integration_super.txt  test_vif.txt
tests/: test_core.py
vassoura/: __init__.py  _compat.py  analisador.py  audit.py  autocorrelacao.py  base_heuristic.py  cooperative_vif.py  core.py  corr_manager.py  correlacao.py  helpers.py  heuristics.py  heuristics_boruta_multi_shap.py  leakage.py  limpeza.py  logging_utils.py  logs.py  relatorio.py  report.py  scaler.py  timeout.py  utils.py  vif.py
vassoura/examples/: 0_exemplo_basico.ipynb  0_vassoura_pd_behavior.ipynb  2_exemplo_benchmark.ipynb  3_vassoura_pd_behavior.ipynb  3_vassoura_pd_behavior_v2.ipynb  3_vassoura_session_pd_behavior.ipynb
vassoura/models/: lgb.py  registry.py  xgb.py
vassoura/preprocessing/: __init__.py  encoders.py  sampler.py  scaler.py
vassoura/process/: __init__.py  advanced.py  basic.py  wrappers.py
vassoura/reports/: vassoura_report.html  vassoura_report_2.html  vassoura_report_3.html
vassoura/tests/: run_tests.sh  test_advanced_heuristics.py  test_autocorr.py  test_boruta_multi_shap.py  test_core.py  test_correlacao.py  test_encoders_pipeline.py  test_graph_cut.py  test_importance.py  test_limpeza.py  test_relatorio_modern.py  test_sampler_property.py  test_scaler.py  test_scaler_property.py  test_session.py  test_special_cols.py  test_timeout_cooperative.py  test_timeout_manager.py  test_utils.py  (+5 more)
(+68 files in other folders)
