[project]
name = "vassoura"
version = "0.0.1a0"
description = "Unified feature-selection & reporting framework"
requires-python = ">=3.9"
authors = [{name = "João Maia", email = "maia.ufrrj@gmail.com"}]
license = "MIT"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.22",
    "scikit-learn>=1.3",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["vassoura*"]
exclude = ["legacy*", "test_results*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "pre-commit",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mike",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
